[package]
name = "glit-cli"
version = "0.1.0"
edition = "2021"
authors = ["shadawck <shadawck@protonmail.com>"]
description = "Cli - Retrieve all mail related to a git repository, user, or organization"
readme = "README.md"
repository = "https://github.com/shadawck/glit"
homepage = "https://github.com/shadawck/glit"
license = "MIT OR Apache-2.0"
keywords = ["osint", "security", "mail", "git"]
categories = ["command-line-utilities", "email"]

[dependencies]
glit-core = { version = "0.1.0", path = "../glit-core" }
reqwest = { version = "0.11.12" }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.0.12", features = ["cargo"] }
futures = "0.3.24"
colored = "2.0.0"
serde_json = "1.0.87"
ahash = "0.8.2"

[profile.release]
lto = true
opt-level = 3
panic = "unwind"
