[package]
name = "glit"
version = "0.1.0"
edition = "2021"
authors = ["shadawck <shadawck@protonmail.com>"]
description = "Cli - Retrieve all mail related to a git repository, user, or organization"
readme = "README.md"
repository = "https://github.com/shadawck/glit"
homepage = "https://github.com/shadawck/glit"
license = "MIT OR Apache-2.0"
keywords = ["osint", "security", "mail", "git"]
categories = ["command-line-utilities", "email"]

[[bin]]
name = "glit"

[dependencies]
reqwest = { version = "0.11.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
glit-core = "0.1.0"
clap = { version = "4.0.12", features = ["cargo"] }
colored = "2.0.0"
serde_json = "1.0.87"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
