[package]
name = "glit-cli"
version = "0.2.0"
edition = "2021"
authors = ["shadawck <shadawck@protonmail.com>"]
description = "Cli - Retrieve all mail related to a git repository, user, or organization"
readme = "README.md"
repository = "https://github.com/shadawck/glit"
homepage = "https://github.com/shadawck/glit"
license = "MIT OR Apache-2.0"
keywords = ["osint", "security", "mail", "git"]
categories = ["command-line-utilities", "email"]

[[bin]]
name = "glit"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

glit-core = "0.2.0"

clap = { version = "4.3", features = ["cargo"] }
colored = "2.0.4"
serde_json = "1.0.104"
env_logger = "0.10.0"
log = "0.4.19"
indicatif = "0.17.5"
