[package]
name = "glit-core"
version = "0.1.0"
edition = "2021"
authors = ["shadawck <shadawck@protonmail.com>"]
description = "Core - Retrieve all mail related to a git repository, user, or organization"
readme = "README.md"
repository = "https://github.com/shadawck/glit"
homepage = "https://github.com/shadawck/glit"
license = "MIT OR Apache-2.0"
keywords = ["osint", "security", "mail", "git"]
categories = ["command-line-utilities", "email"]

[dependencies]
reqwest = { version = "0.11.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.24"
scraper = "0.13.0"
git2 = "0.15.0"
rand = "0.8.5"
ahash = "0.8.2"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
colored = "2.0.0"
rayon = "1.5.3"
dashmap = { version = "5.4.0", default-features = false, features = ["serde"] }
url_serde = "0.2.0"
async-trait = "0.1.58"
tracing = "0.1.37"
crossbeam-channel = "0.5.6"
