[package]
name = "glit-core"
version = "0.2.0"
edition = "2021"
authors = ["shadawck <shadawck@protonmail.com>"]
description = "Core - Retrieve all mail related to a git repository, user, or organization"
readme = "README.md"
repository = "https://github.com/shadawck/glit"
homepage = "https://github.com/shadawck/glit"
license = "MIT OR Apache-2.0"
keywords = ["osint", "security", "mail", "git"]
categories = ["command-line-utilities", "email"]

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.28"
scraper = "0.18.1"
git2 = "0.17.2"
rand = "0.8.5"
ahash = "0.8.3"
serde = { version = "1.0.178", default-features = false, features = ["derive"] }
rayon = "1.7.0"
dashmap = { version = "5.5.0", default-features = false, features = ["serde"] }
async-trait = "0.1.72"
tracing = "0.1.37"
crossbeam-channel = "0.5.8"
log = "0.4.19"
indicatif = { version = "0.17.5", features = ["rayon"] }
