[package]
name = "glit-core"
version = "0.2.0"
edition = "2021"
authors = ["shadawck <shadawck@protonmail.com>"]
description = "Core - Retrieve all mail related to a git repository, user, or organization"
readme = "README.md"
repository = "https://github.com/shadawck/glit"
homepage = "https://github.com/shadawck/glit"
license = "MIT OR Apache-2.0"
keywords = ["osint", "security", "mail", "git"]
categories = ["command-line-utilities", "email"]

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "rustls-tls",
] }
#tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.28"
scraper = "0.18.1"
#git2 = "0.17.2"
rand = "0.8.5"
ahash = "0.8.3"
serde = { version = "1.0.178", default-features = false, features = ["derive"] }
rayon = "1.7.0"
dashmap = { version = "5.5.0", default-features = false, features = ["serde"] }
async-trait = "0.1.72"
tracing = "0.1.37"
crossbeam-channel = "0.5.8"
log = "0.4.19"


gix = { version = "0.55.2", features = [
    "parallel",
    "max-performance",
    "worktree-mutation",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    #"blocking-http-transport-reqwest",
    "progress-tree",
] }

tabled = { version = "0.15.0" }
gitoxide = { version = "0.32.0", default-features = false, features = [
    "gitoxide-core-blocking-client",
    "http-client-reqwest",
    #"max-control",
    #"tracing",
    "fast-safe",
    "gitoxide-core-tools-query",
    "gitoxide-core-tools-corpus",
    "gitoxide-core-tools",
    "prodash-render-line",
    "prodash-render-tui",
    "pretty-cli",
    "prodash-render-line-crossterm",
    #"max-pure",
    "tracing",
] }
gitoxide-core = { version = "0.33.1", features = ["blocking-client"] }
crosstermion = { version = "0.13.0" }
owo-colors = "4.0.0"
prodash = { version = "28.0.0", default-features = false, features = [
    "render-line-autoconfigure",
    "progress-tree",
    "render-tui",
    "render-tui-crossterm",
    "unit-human",
] }
